[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
jsonschema = "0.17.1"
regex = "1.10.4"
reqwest = {version = "0.11.23", features = ["blocking", "json"] }
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"

